--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "yup": "^1.3.2",
+    "formik": "^2.4.5",
+    "react-toastify": "^9.1.3",
+    "mdbreact": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
