--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
     "mdbreact": "^5.2.0",
